# crackTCaptcha

./: .env.example  .gitattributes  .gitignore  404.html  AGENTS.md  CLAUDE.md  README.md  index.html  llms.txt  mkdocs.yml  pyproject.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml
architecture/: index.html
docs/: architecture.md  icon-click.md  image-select.md  index.md  reverse-notes.md  slider.md  word-click.md
docs/superpowers/plans/: 2026-04-17-captcha-type-router.md
docs/superpowers/specs/: 2026-04-17-captcha-type-router-design.md  2026-04-19-jsdom-tdc-refactor-design.md
examples/: tcap2_loader.html
icon-click/: index.html
image-select/: index.html
reverse-notes/: index.html
scripts/: bench.py
search/: search_index.json
slider/: index.html
src/crack_tcaptcha/: __init__.py  captcha_type.py  cli.py  client.py  exceptions.py  models.py  pow.py  server.py  settings.py  trajectory.py
src/crack_tcaptcha/_legacy/: icon_match.py
src/crack_tcaptcha/icon_click/: _legacy_solver.py  pipeline.py  solver.py
src/crack_tcaptcha/pipelines/: __init__.py  _common.py  icon_click.py  image_select.py  slide.py  word_click.py
src/crack_tcaptcha/slider/: pipeline.py  solver.py
src/crack_tcaptcha/solvers/: __init__.py  llm_vision.py  ort_provider.py  word_ocr.py
src/crack_tcaptcha/solvers/models/: word_click_detector.onnx  word_click_matcher.onnx
src/crack_tcaptcha/tdc/: nodejs_jsdom.py  provider.py  scrapling_browser.py
src/crack_tcaptcha/tdc/js/: env_patch.js  event_dispatch.js  invariants.js  package-lock.json  package.json  profile.js  tdc_executor.js
src/crack_tcaptcha/tdc/js/_legacy/: tdc_executor.v1.js
src/crack_tcaptcha/tdc/js/data/: canvas_fp.txt
tests/: conftest.py  test_client.py  test_models.py  test_pipeline_common.py  test_pipeline_icon_click.py  test_pipeline_image_select.py  test_pipeline_slider.py  test_pipeline_word_click.py  test_pow.py  test_slider_solver.py  test_trajectory.py
tests/integration/: test_real.py
word-click/: index.html
